--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -12,5 +12,10 @@
   "Username is required": "Username is required",
   "Username or password incorrect.": "Username or password incorrect.",
   "Remember me": "Remember me",
-  "Version": "Version"
+  "Version": "Version",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Add New": "Add New"
 }
