--- a/src/translations/mk-MK.json
+++ b/src/translations/mk-MK.json
@@ -12,5 +12,10 @@
   "Username is required": "Корисничкото име е задолжително",
   "Username or password incorrect.": "Корисничкото име или лозинката се погрешни.",
   "Remember me": "Запамти ме",
-  "Version": "Верзија"
+  "Version": "Верзија",
+  "First Name": "Име",
+  "Last Name": "Презиме",
+  "Save": "Сними",
+  "Cancel": "Откажи",
+  "Add New": "Додади"
 }
