--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -17,5 +17,6 @@
   "Last Name": "Last Name",
   "Save": "Save",
   "Cancel": "Cancel",
-  "Add New": "Add New"
+  "Add New": "Add New",
+  "Unexpected Error": "Unexpected Error"
 }
