--- a/src/translations/mk-MK.json
+++ b/src/translations/mk-MK.json
@@ -17,5 +17,6 @@
   "Last Name": "Презиме",
   "Save": "Сними",
   "Cancel": "Откажи",
-  "Add New": "Додади"
+  "Add New": "Додади",
+  "Unexpected Error": "Непредвидена Грешка"
 }
